clusters/easy-platform/apps/bbbto-mnp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bbbto-mnp
  labels:
    app.kubernetes.io/part-of: bbbto-mnp
    pod-security.kubernetes.io/enforce: restricted
