clusters/easy-platform/apps/bbbto-mnp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bbbto-mnp
  namespace: bbbto-mnp
spec:
  selector:
    app.kubernetes.io/name: bbbto-mnp
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
