clusters/easy-platform/apps/bbbto-mnp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bbbto-mnp
  namespace: bbbto-mnp
  annotations:
    platform.lazycampus.com/domain-automation: enabled
    platform.lazycampus.com/domain-adopt-existing: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: bbbto.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bbbto-mnp
                port:
                  name: http
    - host: www.bbbto.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bbbto-mnp
                port:
                  name: http
